<resources>
    <string name="app_name">Buchi</string>
    <string name="be_part_of_the_solution">Be part of the solution</string>
    <string name="adopt_a_stay_pet_to_decrease">Adopt a stay pet to decrease the number of stray on the street for there safety every one. <br /><br />Start your journey of finding your companion now using Buchi app</string>
    <string name="over_streets_text">OVER 200,000 STRAY DOGS ON Addis Ababa Streets In 2020!</string>
    <string name="search">Search</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="good_with_children">Good with children</string>
    <string name="types">Types</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="size">Size</string>
    <string name="look">Look</string>
    <string name="dismiss">Dismiss</string>
    <string name="okay">Okay</string>
    <string name="please_wait">Please Wait …</string>
    <string name="not_good_with_children">Not Good with children</string>
    <string name="age_text">Age : %1$s </string>
    <string name="size_text">size : %1$s </string>
    <string name="gender_text">Gender : %1$s </string>
    <string name="list_of_image">List of Image</string>
    <string name="adopt">Adopt Me</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="we_don_t_know_how_to_reach_you">We don\'t know how to reach you?</string>
    <string name="please_your_name_and_mobile_number_we_will_contact_asap">Please your name and mobile number, we will contact ASAP</string>
    <string name="send">Send</string>
    <string name="next">next</string>
    <string name="skip">skip</string>
    <string name="start">Start</string>
    <string name="sort_by">Sort By</string>
    <string name="nearest">nearest</string>

    <string name="error_input_isEmpty">%1$s Required</string>
    <string name="network_error">Network Error</string>
    <string name="success_message">Success Message</string>
    <string name="no_internet">NO Internet</string>
    <string name="connection_error_text">The connection terminated unexpectedly or no data was found. Please try again.</string>
    <string name="close">CLose</string>
    <string name="title_save">Save</string>


    <string-array name="type_array">
        <item>Cat</item>
        <item>Dog</item>
    </string-array>
    <string-array name="good_with_children_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="age_array">
        <item>Baby</item>
        <item>Young</item>
        <item>Adult</item>
        <item>senior</item>
    </string-array>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="size_array">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Xlarge</item>
    </string-array>
</resources>