<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:gravity="center"
    android:background="@drawable/dialog_bg_round"
    android:padding="10dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/connection_error_text"
        android:src="@drawable/no_internet_image" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/no_internet"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/connection_error_text"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btn_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:text="@string/close" />
</LinearLayout>